<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationFragment"
    android:layout_margin="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/izposojevalec"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/izposojevalec"/>


    <Spinner
        android:id="@+id/sektor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:entries="@array/sektor_arr"
        android:minHeight="48dp"
        android:prompt="@string/sektor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/izposojevalec" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/odF"
        app:layout_constraintTop_toBottomOf="@id/sektor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/doF"
        android:layout_marginTop="20dp"
        android:text="OD"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doF"
        app:layout_constraintTop_toBottomOf="@id/sektor"
        app:layout_constraintStart_toEndOf="@id/odF"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="DO"/>

    <TextView
        android:id="@+id/odText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odDate"
        app:layout_constraintEnd_toStartOf="@id/doText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/odF"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doText"
        android:text="@string/doDate"
        app:layout_constraintTop_toBottomOf="@id/doF"
        app:layout_constraintStart_toEndOf="@id/odText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/kmSlide"
        app:layout_constraintTop_toBottomOf="@id/odText"
        android:valueFrom="1.0"
        android:valueTo="20.0"
        android:stepSize="1.0"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/kmText"
        app:layout_constraintTop_toBottomOf="@id/kmSlide"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="20dp"
        android:text="Na sliderju izberi razladjo v km"/>

    <Spinner
        android:id="@+id/namen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:entries="@array/namen_arr"
        android:minHeight="48dp"
        android:prompt="@string/namen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kmText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        app:layout_constraintTop_toBottomOf="@id/namen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/dodaj"/>






</androidx.constraintlayout.widget.ConstraintLayout>